--- a/resume/templates/resume/resume_basic.html
+++ b/resume/templates/resume/resume_basic.html
@@ -149,36 +149,30 @@
                             </div>
                         </div>
                     </div>
-                    <div class="row">
-                        <div class="col-6">
-                            <div class="form-group">
-                                <label for="social-media">Social Media:</label>
-                            </div>
-                        </div>
-                        <div class="col-6">
-                            <div class="form-group">
-                                <label for="email">Social Link:</label>
-                            </div>
-                        </div>
-                    </div>
+                    
 
-                    {% for obj in socials %}
-                    {{obj.id}}--{{ obj.name }}, {{ obj.url }}
-                   <a href="{% url 'addeditSocial' tracking obj.socialtracking  %}"> <i class="fa fa-pencil-square-o" aria-hidden="true"></i> Edit</a>
-                   <a href="{% url 'deletesocial' tracking obj.socialtracking  %}"style='color:red'><i class='fa fa-trash-o' ></i>  Delete</a>
                 
-                   <hr>
-                    {% endfor %}
-
-                    
-
-                    
-                   
-                    <a href="{% url 'addeditSocial' tracking socialtracking  %}" class="btn btn-outline-primary"> + Add new one</a>
                     <button type="submit" class="btn btn-primary">Save Data</button>
 
                 </form>
+                <div class="row">
+                    <div class="col-6">
+                        <div class="form-group">
+                            <label for="social-media">Social Media:</label>
+                        </div>
+                    </div>
+                    <div class="col-6">
+                        <div class="form-group">
+                            <label for="email">Social Link:</label>
+                        </div>
+                    </div>
+                </div>
+
+                <div id="socialdiv"></div>
+                
+
             </div>
+
             
             <div class="col-md-2">
                 <div class="col">
@@ -235,5 +229,92 @@
       if (parts.length === 2) return parts.pop().split(';').shift();
     }
 </script>
+
+<script>
+    // Fetch data from API endpoint
+    fetch('/api/socials/')
+        .then(response => response.json())
+        .then(data => {
+            const divsocial = document.querySelector('#socialTable');
+
+            data.forEach(social => {
+                // Create a new row for each social object
+                const divouter = document.createElement('div');
+                divouter.setAttribute("class","row")
+                
+                const colname = document.createElement('div');
+                colname.setAttribute("class","col-6")
+                const formname = document.createElement('div');
+                formname.setAttribute("class","form-group")
+                var socialnameInput = document.createElement('input');
+                socialnameInput.type = 'text';
+                socialnameInput.setAttribute("class","form-control")
+
+                // Get the select element
+                var select = document.createElement("select");
+                select.setAttribute("class","form-control")
+
+
+                // Create options for Twitter and Facebook
+                var twitterOption = document.createElement("option");
+                twitterOption.value = "twitter";
+                twitterOption.text = "Twitter";
+                select.add(twitterOption);
+
+                var linkedInOption = document.createElement("option");
+                linkedInOption.value = "linkedIn";
+                linkedInOption.text = "LinkedIn";
+                select.add(linkedInOption);
+
+
+                var websiteOption = document.createElement("option");
+                websiteOption.value = "website";
+                websiteOption.text = "Website";
+                select.add(websiteOption);
+
+
+
+                const colurl = document.createElement('div');
+                colurl.setAttribute("class","col-6")
+                const formgurl= document.createElement('div');
+                formgurl.setAttribute("class","form-group")
+                var socialurlInput = document.createElement('input');
+                socialurlInput.type = 'text';
+                socialurlInput.setAttribute("class","form-control")
+
+
+                // Create a new cell for the name
+                socialnameInput.value = social.name;
+                console.log(social.name)
+
+                // Create a new cell for the URL
+                socialurlInput.value = social.url;
+
+                // select.options[0].selected = true;
+                select.value = social.name;
+
+
+                formname.appendChild(select);
+                colname.appendChild(formname);
+
+                formgurl.appendChild(socialurlInput);
+                colurl.appendChild(formgurl);
+
+                divouter.appendChild(colname)
+                divouter.appendChild(colurl)
+
+
+
+                // Add the row to the table body
+                socialdiv.appendChild(divouter);
+
+
+            });
+        })
+        .catch(error => console.error(error));
+</script>
+
+
+
 {% endblock content %}
 
